<resources>
    <string name="app_name">Velox LinPhone</string>
    <string name="title_activity_main">Velox Network</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="incorrect_password">Invalid username or password!\n</string>
    <string name="s_email_address">Username</string>
    <string name="s_password">Password</string>
    <string name="yes">Yes\n</string>
    <string name="password_time">Password</string>
    <string name="welcome_back">Velox Network</string>
    <string name="click_to_login">welcome to login</string>
    <string name="sip_address">sip address</string>
    <string name="home">Home</string>
    <string name="title">Contact</string>
    <string name="my_inbox">Inbox</string>
    <string name="profile">Profile</string>
    <string name="description_numpad_1">number pad 1</string>
    <string name="description_numpad_2">number pad 2</string>
    <string name="description_numpad_3">number pad 3</string>
    <string name="description_numpad_4">number pad 4</string>
    <string name="description_numpad_5">number pad 5</string>
    <string name="description_numpad_6">number pad 6</string>
    <string name="description_numpad_7">number pad 7</string>
    <string name="description_numpad_8">number pad 8</string>
    <string name="description_numpad_9">number pad 9</string>
    <string name="description_numpad_0">number pad 0</string>
    <string name="description_numpad_star">number star digit</string>
    <string name="content_start_call">start call</string>
    <string name="content_description_transfer_call">transfer call</string>
    <string name="content_description_add_call">add call</string>
    <string name="content_description_add_contact">add to contact</string>
    <string name="dialer_address_bar_hint">address bar hint</string>
    <string name="content_description_dialer_erase">erase dialer number</string>
    <string name="content_description_video_conf">video conference call</string>
    <string name="transport">Transport\n</string>
    <string name="transport_udp">UDP</string>
    <string name="transport_tcp">TCP</string>
    <string name="transport_tls">TLS</string>
    <string name="default_sip">sip.linphone.org</string>
    <string name="invalid_credential">Invalid username or password</string>
    <string name="confirm">OK</string>
    <string name="confirm_ye">YES</string>
    <string name="forget_password">Forget Password</string>
    <string name="history">History</string>
    <string name="inbox">Inbox\n</string>
</resources>